Bug 1412714 - Don't clone inner of XBL stylesheet in Servo. r=bz

MozReview-Commit-ID: Kzrod3SBt1k